--- a/react-lib/package.json
+++ b/react-lib/package.json
@@ -1,7 +1,15 @@
 {
     "name": "react-lib",
     "version": "1.0.0",
-    "main": "index.js",
+    "module": "dist/index.js",
     "author": "Rony Moura<ronymmoura@gmail.com>",
-    "license": "MIT"
+    "license": "MIT",
+    "scripts": {
+      "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
+        "rimraf": "^2.6.2"
+      }
 }
