Ajustes no BaseService.js
O método atual não funcionava com o react native, e foi ajustado para que possa ser.

--- a/react-lib/package.json
+++ b/react-lib/package.json
@@ -1,7 +1,7 @@
 {
     "name": "react-lib",
     "version": "1.0.0",
-    "module": "dist/index.js",
+    "module": "index.js",
     "author": "Rony Moura<ronymmoura@gmail.com>",
     "license": "MIT",
     "scripts": {
