--- a/react-lib/package.json
+++ b/react-lib/package.json
@@ -1,10 +1,15 @@
 {
-	"name": "react-lib",
-	"version": "1.0.0",
+	"name": "@intechprev/react-lib",
+	"version": "0.0.1",
 	"main": "index.js",
-	"author": "Rony Moura<ronymmoura@gmail.com>",
+	"author": "Rony Moura <ronymmoura@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
 		"axios": "^0.18.0"
-	}
+	},
+	"devDependencies": {},
+	"scripts": {
+		"publish": "npm publish --access public"
+	},
+	"description": ""
 }
