--- a/react-lib/package.json
+++ b/react-lib/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@intechprev/react-lib",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"main": "index.js",
 	"author": "Rony Moura <ronymmoura@gmail.com>",
 	"license": "MIT",
@@ -9,7 +9,7 @@
 	},
 	"devDependencies": {},
 	"scripts": {
-		"publish": "npm publish --access public"
+		"publish:npm": "npm publish --access public"
 	},
 	"description": ""
 }
